--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ button:hover{
   <p>CNPJ:</p>
   <strong id="pix">54.823.499/0001-66</strong><br>
 
-  <button onclick="copiar()">Copiar novamente</button>
+  <button onclick="copiar()">Copiar Chave Pix</button>
 </div>
 
 <script>
