--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@ body{
   border-radius:12px;
   text-align:center;
   box-shadow:0 10px 30px rgba(0,0,0,.15);
+  max-width:360px;
+  width:100%;
+}
+.logo{
+  max-width:220px;
+  margin-bottom:20px;
 }
 h2{
   color:#2e7d32;
+  margin-bottom:10px;
 }
 button{
   margin-top:18px;
@@ -34,6 +41,7 @@ button{
   color:#fff;
   font-size:16px;
   cursor:pointer;
+  width:100%;
 }
 button:hover{
   background:#256428;
@@ -49,12 +57,18 @@ button:hover{
 <body>
 
 <div class="box">
+
+  <!-- LOGO -->
+  <img src="logo.png" alt="Logo Agro Drone" class="logo">
+
   <h2 id="titulo">Copiando chave PIX…</h2>
+
   <p>CNPJ:</p>
-  <strong id="pix">54.823.499/0001-66</strong><br>
+  <strong id="pix">54.823.499/0001-66</strong>
 
   <button onclick="copiar()">Copiar Chave Pix</button>
   <div class="status" id="status"></div>
+
 </div>
 
 <script>
@@ -70,7 +84,6 @@ function copiar(){
   });
 }
 
-// tenta copiar automaticamente ao abrir a página
 window.onload = copiar;
 </script>
 
