--- a/index.html
+++ b/index.html
@@ -15,41 +15,56 @@ body{
   align-items:center;
   height:100vh;
 }
+
 .box{
   background:#fff;
-  padding:30px;
-  border-radius:12px;
+  padding:22px 24px 24px 24px;
+  border-radius:14px;
   text-align:center;
   box-shadow:0 10px 30px rgba(0,0,0,.15);
   max-width:360px;
   width:100%;
 }
+
 .logo{
-  max-width:220px;
-  margin-bottom:20px;
+  max-width:210px;
+  margin-bottom:6px;
 }
+
 h2{
   color:#2e7d32;
-  margin-bottom:10px;
+  margin:6px 0 8px 0;
+  font-size:20px;
 }
+
+p{
+  margin:6px 0 4px 0;
+}
+
+strong{
+  font-size:16px;
+}
+
 button{
-  margin-top:18px;
-  padding:12px 22px;
+  margin-top:16px;
+  padding:14px 20px;
   border:none;
-  border-radius:8px;
+  border-radius:10px;
   background:#2e7d32;
   color:#fff;
   font-size:16px;
   cursor:pointer;
   width:100%;
 }
+
 button:hover{
   background:#256428;
 }
+
 .status{
-  margin-top:12px;
-  font-size:14px;
-  color:#555;
+  margin-top:10px;
+  font-size:13px;
+  color:#666;
 }
 </style>
 </head>
@@ -67,6 +82,7 @@ button:hover{
   <strong id="pix">54.823.499/0001-66</strong>
 
   <button onclick="copiar()">Copiar Chave Pix</button>
+
   <div class="status" id="status"></div>
 
 </div>
@@ -84,6 +100,7 @@ function copiar(){
   });
 }
 
+// tenta copiar automaticamente ao abrir
 window.onload = copiar;
 </script>
 
